Version 1.0.5
-------------
Added: the ability to change the rotation in a sprite preview by dragging the mouse over it with the left button held down.
Fixed: sound numbering and setting used sound 1 as the dummy sound.
Fixed: missing ampersands in thing flags.
Changed: thing list indices start at 1 to make using state actions like MBF's Spawn easier.
Changed: some control and window sizes have been altered to better fit with larger fonts.
Changed: updated to PyAudio 0.2.8.

Version 1.0.4
-------------
Fixed: added missing state 895 to the list of hardcoded used states.
Fixed: added the second Chaingun muzzle flash state to the chaingun state filter.
Fixed: unused thing flag mnemonics being displayed and saved for the MBF engine configuration.
Changed: the weapon deselect and select state labels have been swapped. Internally they are still swapped to preserve the original erroneous Dehacked behaviour.
Changed: renamed the Deselect and Select weapon states to Lower and Raise states respectively, to better reflect what they are supposed to do.
Changed: characters can now be selected inside input fields without selecting the entire field.
Changed: updated to wxWidgets 3.0.2.

Version 1.0.3
-------------
Fixed: Warnings about missing color profiles on some systems.
Fixed: the Lower and Raise state were (still) erroneously swapped.
Changed: invalid graphics are previewed as "BAD IMAGE" instead of crashing.
Changed: updated wxWidgets to 3.0.0.

Version 1.0.2
-------------
Added: an engine configuration file for MBF that includes the beta state actions, and removed the beta actions from the regular MBF configuration.
Added: RandomJump states are now recognized as using the state in parameter1.
Added: thing index numbers in the things editor.
Fixed: -1 state durations could not be entered.
Fixed: crash when trying to display a sprite with an invalid file format.
Changed: detect additional thing flag delimiters supported by some source ports.

Version 1.0.1
-------------