@@ -1,6 +1,7 @@
 Version 1.0.5
 -------------
 Added: the ability to change the rotation in a sprite preview by dragging the mouse over it with the left button held down.
+Added: clicking an active editor window toolbar button will bring it to the front if it is not already, otherwise it will close it.
 Fixed: sound numbering and setting used sound 1 as the dummy sound.
 Fixed: missing ampersands in thing flags.
 Changed: thing list indices start at 1 to make using state actions like MBF's Spawn easier.
